# vortex-freya-sim

./: .gitignore  Dockerfile  README.md  docker_entrypoint.sh  run_sim.sh
.github/workflows/: docker-publish.yml
vortex_sim_interface/: CMakeLists.txt  package.xml
vortex_sim_interface/launch/: vortex_sim_interface.launch.py
vortex_sim_interface/src/: otter_sim_interface.py  vortex_sim_interface.cpp
vrx_gz/launch/: competition.launch.py  njord_colav_with_otter.launch.py
vrx_gz/src/vrx_gz/: model.py
vrx_gz/worlds/: Njord_colav.sdf  Njord_docking.sdf  Njord_maneuvering.sdf  Njord_navigation.sdf  njord_colav_tasks.sdf  sydney_regatta.sdf
vrx_urdf/vrx_gazebo/models/cpu_cases/: model.sdf
vrx_urdf/wamv_description/urdf/: cpu_cases.xacro  wamv_base.urdf.xacro
vrx_urdf/wamv_gazebo/urdf/dynamics/: wamv_gazebo_dynamics_plugin.xacro
