<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vortex_sim_interface</name>
  <version>0.0.0</version>
  <description>An interface to link vortex-asv to the wamv sim</description>
  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
